samples/_failures_safe/1761626900_e76dea_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_06aaf460.c: In function ‘get_next_token’:
./samples/SAFE/__tmp_06aaf460.c:158:13: error: expected expression at end of input
  158 |             *column += (
      |             ^
./samples/SAFE/__tmp_06aaf460.c:158:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_06aaf460.c:158:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_06aaf460.c:158:13: error: expected declaration or statement at end of input
